fix(<Subnav>): remove wrapping from banner links

--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -66,6 +66,7 @@
         color,
         padding,
         transform;
+      white-space: nowrap;
       width: 100%;
 
       &:focus,
